<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pop_txt_bg"
    android:orientation="vertical"
    tools:context="com.meigsmart.meigapp.activity.SettingsActivity">

    <include
        layout="@layout/include_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20px_in720p">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_layout_select_type"
            android:textColor="@color/black_dan"
            android:textSize="@dimen/_35px_in720p" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80px_in720p"
            android:layout_marginBottom="@dimen/_20px_in720p"
            android:layout_marginTop="@dimen/_20px_in720p"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/setting_baidu"
                style="@style/SettingsTextViewStyle"
                android:layout_marginRight="@dimen/_10px_in720p"
                android:text="@string/settings_layout_baidu" />

            <TextView
                android:visibility="gone"
                android:id="@+id/setting_gaode"
                style="@style/SettingsTextViewStyle"
                android:layout_marginLeft="@dimen/_10px_in720p"
                android:layout_marginRight="@dimen/_10px_in720p"
                android:text="@string/settings_layout_gaode" />

            <TextView
                android:id="@+id/setting_google"
                style="@style/SettingsTextViewStyle"
                android:layout_marginLeft="@dimen/_10px_in720p"
                android:text="@string/settings_layout_google" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
