<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pop_txt_bg"
    android:orientation="vertical"
    tools:context="com.meigsmart.meigapp.activity.BlueGetLogActivity">

    <include
        layout="@layout/include_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20px_in720p"
        android:layout_marginTop="@dimen/_40px_in720p"
        android:text="@string/blue_get_log_type"
        android:textColor="@color/black"
        android:textSize="@dimen/_30px_in720p" />

    <TextView
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80px_in720p"
        android:layout_margin="@dimen/_20px_in720p"
        android:background="@drawable/login_et_bg"
        android:gravity="center"
        android:hint="@string/blue_get_log_hint"
        android:textColor="@color/black"
        android:textSize="@dimen/_30px_in720p" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20px_in720p"
        android:layout_marginTop="@dimen/_20px_in720p"
        android:text="@string/blue_get_log_lines"
        android:textColor="@color/black"
        android:textSize="@dimen/_30px_in720p" />

    <EditText
        android:visibility="gone"
        android:id="@+id/lines"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80px_in720p"
        android:layout_margin="@dimen/_20px_in720p"
        android:background="@drawable/login_et_bg"
        android:gravity="center_vertical"
        android:inputType="number"
        android:maxLines="1"
        android:paddingLeft="@dimen/_10px_in720p"
        android:textColor="@color/black"
        android:textSize="@dimen/_30px_in720p" />

    <TextView
        android:id="@+id/getLog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80px_in720p"
        android:layout_marginLeft="@dimen/_20px_in720p"
        android:layout_marginRight="@dimen/_20px_in720p"
        android:layout_marginTop="@dimen/_60px_in720p"
        android:background="@drawable/login_tv_bg"
        android:gravity="center"
        android:text="@string/blue_get_log_getLog"
        android:textColor="@drawable/bt_status_bg"
        android:textSize="@dimen/_30px_in720p" />

</LinearLayout>
